# gpt-ext

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
gpt_ext/: __init__.py  __main__.py  ai.py  extension.py
gpt_ext/edk_fixes/: extension_base.py
openai_ext/: __init__.py  __main__.py  ai.py  extension.py  main.py  pass_through.py
openai_ext/edk_fixes/: cli.py  extension_base.py
