[tool.poetry]
name = "gpt-ext"
version = "0.0.1"
description = "`gpt-ext` is a Meltano utility extension to execute GPT and LangChain commands."
authors = ["AJ Steers, Meltano"]
license = "Apache 2.0"
packages = [
    { include = "gpt_ext" }
    # uncomment this if you want to include static assets
    # { include = "files_openai-ext.*" }
]
# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_openai-ext/"
#include = [
#    "files_openai-ext/somefile.thing"
#]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.1"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
langchain = "^0.0.136"
chromadb = "^0.3.21"
openai = "^0.27.4"
tiktoken = "^0.3.3"
python-ulid = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpt_ext = 'gpt_ext.extension:GPTExt.cli'
